# yetti

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
docker/: entrypoint.sh
docs/: README.md  docker.md  incremental-sync.md  notifications.md
examples/docker-compose/: compose.yaml  init.sql  yetii.yaml
examples/docker-compose/mock-receiver/: Dockerfile  package.json  server.js
src/: README.md  main.rs
src/cli/: mod.rs
src/commands/: daemon.rs  initialize.rs  mod.rs  odbc.rs  run.rs  setup.rs
src/config/: connection_config.rs  database.rs  endpoint_config.rs  environment_config.rs  error_handling.rs  execution_config.rs  global_settings.rs  logging.rs  mod.rs  monitor_config.rs  query_config.rs  request_config.rs  schedule_config.rs  security_settings.rs  sql_query.rs  transform_config.rs  utils.rs  watermark_config.rs  yetii.rs
src/database/: conn_string.rs  error.rs  mod.rs
src/http/: mod.rs  oauth2.rs  retry.rs
src/monitoring/: mod.rs
src/notifications/: mod.rs  template.rs
src/state/: mod.rs
src/transform/: mod.rs
src/utils/: mod.rs  odbc_check.rs
