[package]
name = "YETII"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_yaml = "0.9.34+deprecated"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.37", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
once_cell = "1.21.3"
